Move how to run this test from Main.java to README.